trunk/Archive2/38/9d411b52086312/output
main.cpp: In member function 'void* selfie_taker::operator()() const':
main.cpp:5:16: error: invalid conversion from 'const void*' to 'void*' [-fpermissive]
         return this; // haha, clearly not stateless
                ^
